--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <!-- =======================================================
-    Theme Name: Medilab
+    Theme Name: Medilab edw
     Theme URL: https://bootstrapmade.com/medilab-free-medical-bootstrap-theme/
     Author: BootstrapMade.com
     Author URL: https://bootstrapmade.com
