--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <img src="img/logo.png" class="img-responsive">
             </div>
             <div class="banner-text text-center">
-              <h1 class="white">Healthcare at your desk!!</h1>
+              <h1 class="white">Edwin Aritama</h1>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
               <a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
             </div>
