--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div>
             <div class="banner-text text-center">
               <h1 class="white">Edwin Aritama</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod <br>tempor incididunt ut labore et dolore magna aliqua.</p>
+              <p>Welcome to personal blog</p>
               <a href="#contact" class="btn btn-appoint">Make an Appointment.</a>
             </div>
             <div class="overlay-detail text-center">
